Se construyo la maqueta del perfil de usuario
Se agrego la maqueta de perfil de usuario y se hizo pequeña
corrección en navegabilidad

--- a/src/pages/start/start.html
+++ b/src/pages/start/start.html
@@ -67,7 +67,7 @@
               <img [src]="'https://alquio.com/productos/' + product.foto" class="imgCard"/>
             </ion-thumbnail>
             <div class="card-cont">
-              <p class="precio">{{ 'USD ' + product.precio }}</p>
+              <p class="precio">{{ 'COP ' + product.precio }}</p>
               <p class="titulo">{{ product.titulo }}</p>
             </div>
           </div>
