--- a/src/pages/config/config.html
+++ b/src/pages/config/config.html
@@ -4,7 +4,7 @@
             <ion-item (click)="goToProfile()">
                 <p>Perfil</p>
             </ion-item>
-            <ion-item>
+            <ion-item (click)="showDirecction()">
                 <p>Dirección de envío</p>
             </ion-item>
         </ion-list>
