Creacion de paginas en header-->config, modificaciones en la pagina de ordenes e implementacion de funcionalidades como camara y editar usuario en Perfil

--- a/src/pages/config/config.html
+++ b/src/pages/config/config.html
@@ -10,28 +10,28 @@
         </ion-list>
 
         <ion-list>
-            <ion-item>
+            <ion-item (click)="gotoNotificaciones()">
                 <p>Notificaciones</p>
             </ion-item>
-            <ion-item>
+            <ion-item (click)="presentCalidadImagen()">
                 <p>Calidad de imagen</p>
             </ion-item>
-            <ion-item>
+            <ion-item (click)="Borrarhistorial()">
                 <p>Limpiar historial</p>
             </ion-item>
         </ion-list>
 
         <ion-list>
-            <ion-item>
+            <ion-item (click)="Sugerencias()">
                 <p>Sugerencias</p>
             </ion-item>
-            <ion-item>
+            <ion-item (click)="gotoCalifica()">
                 <p>Califica Alquio</p>
             </ion-item>
-            <ion-item>
+            <ion-item (click)="gotoPoliticasPage()">
                 <p>Politicas de privacidad</p>
             </ion-item>
-            <ion-item>
+            <ion-item (click)="gotoLegalInformation()">
                 <p>Información legal</p>
             </ion-item>
         </ion-list>
