--- a/src/pages/product/product.html
+++ b/src/pages/product/product.html
@@ -4,7 +4,7 @@
       <ion-slides pager>
         <ion-slide>
           <div class="slides-img"
-          [style.background-image]="'url(https://alquio.com/productos/' + product.foto + ')'">
+          [style.background-image]="'url(https://alquio.com/productos/images/' + product.foto + ')'">
           </div>
         </ion-slide>
       </ion-slides>
