--- a/src/pages/start/start.html
+++ b/src/pages/start/start.html
@@ -48,7 +48,7 @@
           <div class="products-int">
           <!-- <ion-card tappable (click)="goProduct(product)"> -->
             <ion-thumbnail>
-              <img [src]="'https://alquio.com/productos/' + product.foto" class="imgCard"/>
+              <img [src]="'https://alquio.com/productos/thumbnail/' + product.foto" class="imgCard"/>
             </ion-thumbnail>
             <div class="card-cont">
               <p class="precio">{{ 'COP ' + product.precio }}</p>
@@ -64,7 +64,7 @@
           <div class="products-int">
           <!-- <ion-card tappable (click)="goProduct(product)"> -->
             <ion-thumbnail>
-              <img [src]="'https://alquio.com/productos/' + product.foto" class="imgCard"/>
+              <img [src]="'https://alquio.com/productos/thumbnail/' + product.foto" class="imgCard"/>
             </ion-thumbnail>
             <div class="card-cont">
               <p class="precio">{{ 'COP ' + product.precio }}</p>
