--- a/src/pages/califica/califica.html
+++ b/src/pages/califica/califica.html
@@ -1,5 +1,5 @@
 <ion-header style="text-align: center;">
-    <img src="assets/imgs/customicons/calificaheader.PNG" height="40%" width="40%"/>
+    <img src="assets/imgs/customicons/calificaheader.PNG" height="114px" width="111px"/>
     <ion-title>¿Cómo fue tu experiencia<br />con nosotros?</ion-title>
 </ion-header>
   
