--- a/src/pages/start/start.html
+++ b/src/pages/start/start.html
@@ -46,7 +46,7 @@
     
   <ion-row class="row-promo-title">
     <ion-col col-12 text-center>
-      <ion-label class="home-promo-title">promoción de semana</ion-label>
+      <ion-label class="home-promo-title">Promoción de semana</ion-label>
     </ion-col>
   </ion-row>
 
@@ -80,10 +80,6 @@
               <img *ngIf="product.inventario_operativo === 0" [src]="'assets/imgs/start/agotado-banner-diagonal.png'" class="imgCardAgotado"/>
             </ion-thumbnail>
             <div class="card-cont">
-<<<<<<< HEAD
-=======
-              <p class="precio">{{ 'COP ' + product.precio }}</p>
->>>>>>> carlos-splash
               <p class="titulo">{{ product.titulo }}</p>
               <p class="precio">{{ 'COP ' + product.precio }}</p>
               <p class="titulo-categoria">{{ categoryName }}</p>
